--- a/views/carrusel.html
+++ b/views/carrusel.html
@@ -78,9 +78,13 @@
                         Cancelar
                     </button>
 
-                    <button type="submit" class="btn btn-success">
+                    <button type="submit" class="btn btn-success" id="btnGuardar" disabled>
                         Guardar imagen
                     </button>
+
+                    <small class="text-danger d-none" id="fileError">
+                        Archivo no permitido. Solo JPG, JPEG, PNG o WEBP.
+                    </small>
 
                 </div>
 
