--- a/views/users/usuario.html
+++ b/views/users/usuario.html
@@ -4,7 +4,7 @@
     <div class="header-actions">
         <h1>Gestión de Usuarios</h1>
         <button id="btnNewUser" class="btn-primary">
-            <i class="fas fa-plus"></i> + Nuevo Usuario
+            <i class="fas fa-plus"></i> Nuevo Usuario
         </button>
     </div>
 
