--- a/views/home/layout.html
+++ b/views/home/layout.html
@@ -36,9 +36,27 @@
             <a href="/pruebaError" class="nav-link">
                 <i data-lucide="cpu"></i> Prueva Error
             </a>
-            <a href="/users" class="nav-link">
-                <i data-lucide="terminal"></i> Usuarios
-            </a>
+            <div class="nav-dropdown-wrapper">
+                <a class="nav-link d-flex justify-content-between align-items-center" data-bs-toggle="collapse"
+                    href="#adminSubmenu" role="button" aria-expanded="false">
+                    <div class="d-flex align-items-center gap-12">
+                        <i data-lucide="settings"></i>
+                        <span>Administración</span>
+                    </div>
+                    <i data-lucide="chevron-down" class="chevron-icon" size="14"></i>
+                </a>
+
+                <div class="collapse" id="adminSubmenu">
+                    <div class="nav-sub-items">
+                        <a href="/users" class="nav-link sub-link">
+                            <i data-lucide="users"></i> Usuarios
+                        </a>
+                        <a href="/departments" class="nav-link sub-link">
+                            <i data-lucide="shield-check"></i> Departamentos
+                        </a>
+                    </div>
+                </div>
+            </div>
             <a href="/carrusel" class="nav-link">
                 <i data-lucide="arrow-up-right-from-circle"></i> Carrucel
             </a>
